@@ -9,6 +9,7 @@
 - Feature: [#22046] [Plugin] Add interface for crashed vehicle particle.
 - Feature: [#22085] [Plugin] The result of actions that create banners now includes the bannerIndex.
 - Feature: [#22087] [Plugin] Expose guests’ favourite rides to the plugin API.
+- Feature: [#22090] [Plugin] Allow writing of paused state in non-networked settings.
 - Feature: [#22140] Add option to automatically close dropdown menus if Enlarged UI is enabled.
 - Feature: [#22150] [Plugin] Expose monthly expenditure history to the plugin API.
 - Improved: [#19870] Allow using new colours in UI themes.
